--- a/gb/23/5/10/n13993228.md
+++ b/gb/23/5/10/n13993228.md
@@ -1,70 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>汤姆·汉克斯曾担心《阿甘正传》演傻子没人看</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2014/03/1403292015432003.jpg" />
 <h6>汤姆·汉克斯（Tom Hanks） 。  (ANDREW COWIE/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年05月11日讯】（大纪元记者叶子杰编译报导）当年拍摄《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E7%94%98%E6%AD%A3%E4%BC%A0.md#1">阿甘正传</a>》时，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md#1">汤姆·汉克斯</a>饰演傻乎乎的“阿甘”，连他自己也不知道是否会成功。汉克斯曾问导演：“有人会关心这部电影吗？”</p>
-<p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E7%94%98%E6%AD%A3%E4%BC%A0.md#1">阿甘正传</a>》（Forrest Gump）是1994年的一部美国电影，故事描述主角“阿甘”童年时智商仅75；虽然不聪明，但他靠着善良憨厚的性格与一股脑儿的毅力坚持，完成了很多人做不到的事，活出了属于自己的美满人生。</p>
-<p>据《人物》报导，66岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md#1">汤姆·汉克斯</a>（Tom Hanks，又译：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B.md#1">汤姆·汉克</a>）周二晚上在纽约市的纽约客现场活动中，向主编大卫·瑞姆尼克（David Remnick）表示，他在1994年演出《阿甘正传》时曾有一些疑虑，担心演出傻乎乎的阿甘是否有意义？别人会关心这电影？不知该片是否会成功。</p>
+	<p>【大纪元2023年05月11日讯】（大纪元记者叶子杰编译报导）当年拍摄《阿甘正传》时，汤姆·汉克斯饰演傻乎乎的“阿甘”，连他自己也不知道是否会成功。汉克斯曾问导演：“有人会关心这部电影吗？”</p>
+<p>《阿甘正传》（Forrest Gump）是1994年的一部美国电影，故事描述主角“阿甘”童年时智商仅75；虽然不聪明，但他靠着善良憨厚的性格与一股脑儿的毅力坚持，完成了很多人做不到的事，活出了属于自己的美满人生。</p>
+<p>据《人物》报导，66岁的汤姆·汉克斯（Tom Hanks，又译：汤姆·汉克）周二晚上在纽约市的纽约客现场活动中，向主编大卫·瑞姆尼克（David Remnick）表示，他在1994年演出《阿甘正传》时曾有一些疑虑，担心演出傻乎乎的阿甘是否有意义？别人会关心这电影？不知该片是否会成功。</p>
 <p>《阿甘正传》当时是由劳勃·辛密克斯（Robert Zemeckis）执导。汉克斯回忆当时演这部电影时，有一次跟导演谈话。</p>
 <p>他问导演：“嘿，劳勃，我有个问题想问你。有人会关心这部电影吗？”“这个人坐在一个东西上，穿着这双傻乎乎的鞋子和这套布谷鸟的衣服，带着一个装满好奇的乔治书和类似物品的箱子。”汉克斯当时对扮演傻子主角的电影感到相当疑惑。他问：“我们在这里做的事情，对任何人来说都是有意义的吗？”</p>
-<figure id="attachment_7194901" aria-describedby="caption-attachment-7194901" style="width: 252px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2005/02/502104011391.jpg"><img class="size-full wp-image-7194901" src="https://i.epochtimes.com/assets/uploads/2005/02/502104011391.jpg" alt="" width="252" b="384" /></a><figcaption id="caption-attachment-7194901" class="wp-caption-text">汤姆?汉克主演《阿甘正传》中傻乎乎的阿甘(AFP提供)</figcaption></figure>
+<figure id="attachment_7194901" aria-describedby="caption-attachment-7194901" style="width: 252px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2005/02/502104011391.jpg"><img decoding="async" class="size-full wp-image-7194901" src="https://i.epochtimes.com/assets/uploads/2005/02/502104011391.jpg" alt="" width="252" b="384" /></a><figcaption id="caption-attachment-7194901" class="wp-caption-text">汤姆?汉克主演《阿甘正传》中傻乎乎的阿甘(AFP提供)</figcaption></figure>
 <p>然而，导演表示，这会是个雷。他说：“这是个雷区，汤姆，这是个GG……雷区。”</p>
 <p>汉克斯接着说：“我们可能种下摧毁我们自己的种子。任何一步都可能是个弹跳贝蒂（意指德国s型地雷，是跳雷中最著名的一种，绰号‘弹跳贝蒂’），它会立刻把我们炸飞。”</p>
-<p>汉克斯不仅谈到与导演拍摄电影时资金缺乏的困境，两人不得不预支钱解决问题，还提及了他对导演的敬意。汉克说：“你不知道它是否会成功，你只能相信他。”</p>
+<p>汉克斯不仅谈到与导演拍摄电影时资金缺乏的困境，两人不得不预支钱解决问题，还提及了他对导演的敬意。汉克斯说：“你不知道它是否会成功，你只能相信他。”</p>
 <p>《阿甘正传》正式上映后，成为当时北美最卖座电影并且获得全世界热烈反响，好评如潮。</p>
 <p>本片还荣获第67届奥斯卡金像奖最佳影片，也为汉克斯赢得了奥斯卡最佳男演员奖；劳勃·辛密克斯荣获最佳导演，埃里克·罗斯荣获最佳改编剧本，还有最佳视效和最佳剪辑奖。</p>
-<figure id="attachment_6093481" aria-describedby="caption-attachment-6093481" style="width: 396px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2011/12/1112291423062208.jpg"><img class="size-full wp-image-6093481" src="https://i.epochtimes.com/assets/uploads/2011/12/1112291423062208.jpg" alt="" width="396" b="599" /></a><figcaption id="caption-attachment-6093481" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B.md#1">汤姆·汉克</a>斯因成功饰演《阿甘正传》而获第67届奥斯卡最佳男主角奖。（图： VINCE BUCCI / AFP ImageForum提供）</figcaption></figure>
-<p>最近，汉克斯的新喜剧《小行星城》（Asteroid City）即将上映，由名导韦斯·安德森（Wes Anderson）执导。安德森执导的电影常以古怪、色彩缤纷的角色与视觉独特而闻名。汉克斯在剧中扮演爷爷的角色。</p>
+<figure id="attachment_6093481" aria-describedby="caption-attachment-6093481" style="width: 396px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2011/12/1112291423062208.jpg"><img decoding="async" class="size-full wp-image-6093481" src="https://i.epochtimes.com/assets/uploads/2011/12/1112291423062208.jpg" alt="" width="396" b="599" /></a><figcaption id="caption-attachment-6093481" class="wp-caption-text">汤姆·汉克斯因成功饰演《阿甘正传》而获第67届奥斯卡最佳男主角奖。（图： VINCE BUCCI / AFP ImageForum提供）</figcaption></figure>
+<p>最近，汉克斯的新喜剧《小行星城》（Asteroid City）即将上映，由名导韦斯·安德森（Wes Anderson）执导。安德森执导的电影常以古怪的角色、剧情，以及色彩缤纷的视觉效果而闻名。汉克斯在剧中扮演爷爷的角色。</p>
 <figure id="attachment_13969849" class="wp-caption aligncenter"><figcaption id="caption-attachment-13969849" class="wp-caption-text"></figcaption></figure>
 <p>《小行星城》描述发生在1955年一座虚构的美国沙漠小镇，镇上正在举办一场年轻天文学家和太空人大会，原本的计划是让来自美国全国各地的学生和家长聚集在一起进行学术竞赛争取奖学金，但却意外被一件即将改变全世界的大事件打乱原来的行程。</p>
 <p>《小行星城》中文预告片：<ahref="https://www.youtube.com/watch?v=2R75PBGhDoE" target="_blank" rel="noopener noreferrer">请点此观看影片</a></p>
 <p>《小行星城》将于6月23日在美国及全球上映。</p>
-<figure id="attachment_13969849" aria-describedby="caption-attachment-13969849" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13969849-AC_FP_00001.jpg"><img class="size-medium wp-image-13969849" src="https://i.epochtimes.com/assets/uploads/2023/04/id13969849-AC_FP_00001-450x189.jpg" alt="《小行星城》（Asteroid City）" width="450" b="189" /></a><figcaption id="caption-attachment-13969849" class="wp-caption-text">《小行星城》（Asteroid City）剧照，（左起）杰森?薛兹曼（Jason Schwartzman），汤姆?汉克斯（Tom Hanks）。（UIP提供）</figcaption></figure>
+<figure id="attachment_13969849" aria-describedby="caption-attachment-13969849" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13969849-AC_FP_00001.jpg"><img decoding="async" class="size-medium wp-image-13969849" src="https://i.epochtimes.com/assets/uploads/2023/04/id13969849-AC_FP_00001-450x189.jpg" alt="《小行星城》（Asteroid City）" width="450" b="189" /></a><figcaption id="caption-attachment-13969849" class="wp-caption-text">《小行星城》（Asteroid City）剧照，（左起）杰森·薛兹曼（Jason Schwartzman），汤姆·汉克斯（Tom Hanks）。（UIP提供）</figcaption></figure>
 <p>责任编辑：茉莉</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913312.md#1">汤姆汉克回归演喜剧 一改温暖形象扮演恶邻居</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969845.md#1">喜剧《小行星城》预告 汤姆·汉克斯与古怪小镇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/1/n13985933.md#1">汤姆·汉克斯与妻子庆祝结婚35周年：爱是一切</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993653.md#1">献声《小美人鱼》中文版 阎奕格太入戏跪着听</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/22/n13913312.md#1">汤姆汉克回归演喜剧 一改温暖形象扮演恶邻居</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/10/n13969845.md#1">喜剧《小行星城》预告 汤姆·汉克斯与古怪小镇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/1/n13985933.md#1">汤姆·汉克斯与妻子庆祝结婚35周年：爱是一切</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346146.md#1">《闪电侠》影集问世十周年 葛兰高斯汀感谢粉丝</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232880.md#1" target="_blank">【征文】史上最公平选官制 科举千年兴衰录(1)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/6/n13989274.md#1">【未解之谜】“美梦”成真？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981899.md#1">【杨延昭传奇】“潘湖浊，杨湖清” 天意明辨忠与奸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987863.md#1">中华传统母亲花是哪一种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969696.md#1">【古道人生】同是卖泥丸 何以一个能治病一个医死人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931544.md#1">【医案】迅雷不及掩耳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993177.md#1">【时事金扫描】普京阅兵缩水 台海兵演结果惨烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993094.md#1">【新闻大家谈】不止惹翻加国 习或面临惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993340.md#1">【秦鹏观察】成都警方发掌掴视频 习为雄安辩护</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991795.md#1">岳山：中南海可能曾因脱贫造假发生内讧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992253.md#1">中共报复性驱逐加外交官 特鲁多强硬回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991876.md#1">北京顶级豪宅项目爆雷 75套豪宅被抵押</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992355.md#1">遭传转移8亿资产到美国 金马影帝徐峥回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991550.md#1">曾任邓丽君经纪人 资深娱乐人管伟华病逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991678.md#1">微博头像已换 工作室改名 杨幂离开老东家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13992600.md#1">黎姿每天步行1万步 获赞“身材宛如少女”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991615.md#1">藏族导演万玛才旦猝逝 电影《塔洛》曾获金马奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991180.md#1">白袜变黑很恶心 专家教你如何让它洁白如新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983839.md#1">黑胡椒抗癌 黄芪缓解哮喘 10种顶级草药激活免疫力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13990965.md#1">除了房地产 哪些投资可以避险又增值？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988093.md#1">胃酸逆流可引发癌前病变 防食道癌要记住这5点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991762.md#1">4个信号是肾脏在求救 医师：护肾这7件事很重要</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345934.md#1">【新闻欣视角】北京政局或失控 美国预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345864.md#1">【新闻大破解】十月惊奇在中东 以色列打台湾牌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/10/n13993228.htm">汤姆·汉克斯曾担心《阿甘正传》演傻子没人看</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993228.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/10/n13993228.htm">汤姆·汉克斯曾担心《阿甘正传》演傻子没人看</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/5/10/n13993228.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
